--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,4 @@ spring.datasource.password=
 
 spring.jpa.hibernate.ddl-auto=update
 ai.service.url=http://localhost:8000/
-auth.url=http://localhost:8080/userDetails/
+auth.url=http://localhost:8080/userDetails
