--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,8 @@ spring.datasource.username= root
 spring.datasource.password=
 
 spring.jpa.hibernate.ddl-auto=update
-ai.service.url=http://localhost:8000/
-auth.url=http://localhost:8080/userDetails
+ai.service.url=http://aiservice/
+auth.url=http://authservice/userDetails
 
 
 STORAGE_ACCESS_KEY=u+cGFa7ChEBkn0jlUDmWESb7L2CMtwbOOTByqB3Jvac
